# arcs_cohort_bringup

./: README.md  package.xml  setup.cfg  setup.py
.github/workflows/: generate-docs.yml
config/: two_rovers.yaml
launch/: multi_rover_sim_bringup.launch.py  simulation_bringup.launch.py
scripts/: generate_launch_docs.py  generate_template_md.py
templates/: README.template.md
